--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -163,7 +163,7 @@ block pagecontent
 				.swiper-wrapper
 					+e.slide.swiper-slide
 						+s-about(class="") 
-					+e.slide.swiper-slide.d-none.d-lg-block
+					+e.slide--team.swiper-slide.d-none.d-lg-flex
 						+s-team(class="")
 
 		+s-servises(class="")
