--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.scss
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.scss
@@ -105,7 +105,9 @@
 	@include media-breakpoint-down(xs) {} 
 
 }
-
+.pg__ttl{
+  padding-bottom: 1px;
+}
 .wrks-wrap{
   @include media-breakpoint-down(md) {
     .fp-tableCell{
@@ -157,11 +159,11 @@
       
   //   padding-top: 158px;
   // }
-  @include media-breakpoint-up(lg) {
-    // padding-top: 148px;
-   padding-top: 0; 
-  }
-  padding-top: 100px;
+  // @include media-breakpoint-up(lg) {
+  //   // padding-top: 148px;
+  //  padding-top: 0; 
+  // }
+  // padding-top: 100px;
   @media (max-height: 600px){
     padding-top: 0;
     .wrks__tbs-itm{
