--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -27,12 +27,15 @@ mixin s-portfolio()
 								<li><a href="#tab3"></a></li>
 								<li><a href="#tab4"></a></li>
 								<li><a href="#tab5" class="nw"></a></li>
+			mixin pic(i)
+				picture
+					img.object-fit-js(src="img/loadgif.gif" data-src=`img/project-${i}.jpg`    , alt="")
 			.js-tabs.wrks__tbs
 				#tab1.wrks__tbs-itm
 					.arn-msnr
 						//- .cl-sizer.cl-1
-						+b.cl.cl-7.itm.img-bg(href="#" style="background-image: url(img/project-1-sm.jpg)" data-img="img/project-1.jpg").full-modal-open-js
-							img(src="img/project-1-sm.jpg")
+						+b.cl.cl-7.itm(href="#" data-img="img/project-1.jpg").full-modal-open-js
+							+pic('1-sm')
 							.itm__more
 								.ttl-bord
 									+e.DIV.title Билборд  для лечебного  центра компания&nbsp;&mdash;  
@@ -40,8 +43,8 @@ mixin s-portfolio()
 										span.thm.d-inline-block D-medical
 								button.btt.btt-blue(type="button")
 									span Нажмите для просмотра проекта
-						+b.cl.cl-5.itm.img-bg(href="#" style="background-image: url(img/project-2-sm.jpg)" data-img="img/project-2.jpg").full-modal-open-js
-							img(src="img/project-2-sm.jpg")
+						+b.cl.cl-5.itm(href="#" data-img="img/project-2.jpg").full-modal-open-js
+							+pic('2-sm')
 							.itm__more
 								.ttl-bord
 									+e.DIV.title  Продающий сайт   для  
@@ -54,8 +57,8 @@ mixin s-portfolio()
 									span Нажмите для просмотра проекта
 						.cl-7
 							.arn-msnr
-								+b.cl.cl-7.itm.ht6.img-bg(href="#" style="background-image: url(img/project-3-sm.jpg)" data-img="img/project-3.jpg").full-modal-open-js
-									img(src="img/project-3-sm.jpg")
+								+b.cl.cl-7.itm.ht6(href="#" data-img="img/project-3.jpg").full-modal-open-js
+									+pic('3-sm')
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Продающий сайт   для  
@@ -65,8 +68,8 @@ mixin s-portfolio()
 												| General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
-								+b.cl.cl-5.itm.ht6.img-bg(href="#" style="background-image: url(img/project-4-sm.jpg)" data-img="img/project-4.jpg").full-modal-open-js
-									img(src="img/project-4-sm.jpg")
+								+b.cl.cl-5.itm.ht6(href="#" data-img="img/project-4.jpg").full-modal-open-js
+									+pic('4-sm')
 									.itm__more
 										.ttl-bord
 											+e.DIV.title Листовка   для 
@@ -78,8 +81,8 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						 
-								+b.cl.cl-7.itm.ht5.img-bg(href="#" style="background-image: url(img/project-5-sm.jpg)" data-img="img/project-5.jpg").full-modal-open-js
-									img(src="img/project-5-sm.jpg")
+								+b.cl.cl-7.itm.ht5(href="#" data-img="img/project-5.jpg").full-modal-open-js
+									+pic('5-sm')
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Продающий сайт   для  
@@ -90,8 +93,8 @@ mixin s-portfolio()
 												| General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
-								+b.cl.cl-5.itm.ht5.img-bg(href="#" style="background-image: url(img/project-6-sm.jpg)" data-img="img/project-6.jpg").full-modal-open-js
-									img(src="img/project-6-sm.jpg")
+								+b.cl.cl-5.itm.ht5(href="#" data-img="img/project-6.jpg").full-modal-open-js
+									+pic('6-sm')
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Листовка   для 
@@ -101,8 +104,8 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						.cl-5.cl-5-right
-							+b.cl.cl-12.itm.ht4.img-bg(href="#" style="background-image: url(img/project-7-sm.jpg)" data-img="img/project-7.jpg").full-modal-open-js
-								img(src="img/project-7-sm.jpg")
+							+b.cl.cl-12.itm.ht4(href="#" data-img="img/project-7.jpg").full-modal-open-js
+								+pic('7-sm')
 								.itm__more
 									.ttl-bord
 										+e.DIV.title  Продающий сайт   для 
@@ -111,8 +114,8 @@ mixin s-portfolio()
 											|  для компании  Geroy
 									button.btt.btt-blue(type="button")
 										span Нажмите для просмотра проекта
-							+b.cl.cl-12.itm.img-bg(href="#" style="background-image: url(img/project-8-sm.jpg)" data-img="img/project-8.jpg").full-modal-open-js
-								img(src="img/project-8-sm.jpg")
+							+b.cl.cl-12.itm(href="#" data-img="img/project-8.jpg").full-modal-open-js
+								+pic('8-sm')
 								.itm__more
 									.ttl-bord
 										+e.DIV.title  Продающий сайт   для 
@@ -121,8 +124,8 @@ mixin s-portfolio()
 											| “Лабиринт”
 									button.btt.btt-blue(type="button")
 										span Нажмите для просмотра проекта
-						+b.cl.cl-7.itm.img-bg(href="#" style="background-image: url(img/project-9-sm.jpg)" data-img="img/project-9.jpg").full-modal-open-js
-							img(src="img/project-9-sm.jpg")
+						+b.cl.cl-7.itm(href="#" data-img="img/project-9.jpg").full-modal-open-js
+							+pic('9-sm')
 							.itm__more
 								.ttl-bord
 									+e.DIV.title Билборд  для лечебного  центра компания&nbsp;&mdash;  
@@ -130,8 +133,8 @@ mixin s-portfolio()
 										span.thm.d-inline-block D-medical
 								button.btt.btt-blue(type="button")
 									span Нажмите для просмотра проекта
-						+b.cl.cl-5.itm.lst.img-bg(href="#" style="background-image: url(img/project-all.jpg)")
-							img(src="img/project-all.jpg")
+						+b.cl.cl-5.itm.lst(href="#")
+							+pic('all')
 							#loadWorks.itm__more()
 								big.thm.d-inline-block
 									big +34
