--- a/sourse/pug/blocks/s-team/_s-team.pug
+++ b/sourse/pug/blocks/s-team/_s-team.pug
@@ -13,7 +13,7 @@ mixin s-team()
 								mixin it(x)
 									+e.slide-sm.tabs__btn&attributes(attributes)
 										+e.img-wrap-sm
-											img(src=`img/team-${x}.png`, alt='') 
+											img(src="img/loadgif.gif" data-src=`img/team-${x}.png`, alt='') 
 								+it('1')(class="active")
 								+it('2')
 								+it('3')
@@ -28,7 +28,7 @@ mixin s-team()
 									.col-xxl-5.col-md-4.align-self-end
 										+e.img-wrap
 											+e.title.d-md-none.text-center= t
-											img.res-i(src=`img/team-${i}.png`, alt='')
+											img.res-i(src="img/loadgif.gif" data-src=`img/team-${i}.png` , alt='')
 									.col
 										+e.caption
 											+e.text
