--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -54,11 +54,11 @@ mixin top-nav()
 							i
 						span.txt меню
 				.col-md-auto.col-8.text-center
-					+e.logo.logo.crls__logo(href='#')
+					+e.logo.logo.crls__logo(href='/')
 						.logo_main.wow.fadeInLeft
-							img.res-i(src="img/logo-name.svg", alt="")
-						.logo_name.wow.fadeInRight
 							img.res-i(src="img/logo.svg", alt="")
+						.logo_name.wow.fadeInRight
+							img.res-i(src="img/logo-name.svg", alt="")
 				
 				.col.d-none.d-md-block
 					+mnu()
