--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -97,7 +97,7 @@ block pagecontent
 					+icon("whatsapp")
 		.crls-cl.crls-tl
 			.after
-				+e.logo.logo.crls__logo(href='#')
+				+e.logo--js.logo.crls__logo(href='#mainHead')
 					.logo_main.wow.fadeInLeft
 						img.res-i(src="img/logo.svg", alt="")
 					.logo_name.wow.fadeInRight
