--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -65,6 +65,8 @@ html(lang="ru")
 		script(src="libs/fullPage.js/vendors/scrolloverflow.min.js")
 		script(src="libs/fullPage.js/fullpage.min.js") 
 		script(src="libs/imagesloaded.pkgd.min.js") 
+		script(src="libs/picturefill.min.js") 
+		script(src="libs/ofi.min.js") 
 
  
 		script(src="libs/masonry/dist/masonry.pkgd.min.js")
