--- a/sourse/pug/blocks/s-logos/_s-logos.scss
+++ b/sourse/pug/blocks/s-logos/_s-logos.scss
@@ -15,6 +15,9 @@
 	}
 	&__col{
 		text-align: center;
+		img{
+			max-height: rem(130)
+		}
 		@include media-breakpoint-up(xxl) {
 
 			margin-bottom: rem(65);
