--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.scss
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.scss
@@ -1,3 +1,22 @@
+.object-fit-js{
+	object-fit: cover;
+	object-position: center;
+	font-family: 'object-fit: cover; object-position: center;';
+}
+
+picture{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  background-color: $body-color;
+  height: 100%;
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 .wrks {
   position: relative;
   &__tbs-itm{
