--- a/sourse/pug/blocks/s-servises/_s-servises.pug
+++ b/sourse/pug/blocks/s-servises/_s-servises.pug
@@ -39,7 +39,7 @@ mixin s-servises2()
 									li
 										+e.link(href="#")= item
 							+e.img-wrap
-								img.res-i(src=`img/servises-${i}.png`)
+								img.res-i(src="img/loadgif.gif" data-src=`img/servises-${i}.png`)
 				+item("1","Веб разработка","Мобильное приложение","Продающая страница","Корпоративный сайт","Сайт визитка")
 				+item("2","Дизайн","Мобильное приложение","Сайт","Логотип","Фирменный стиль","Полиграфия","Упаковка","Наружная реклама")
 				+item("3","Маркетинг","SEO","SMM","Контекстная реклама","Упаковка бизнеса")
