--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -27,7 +27,9 @@ mixin header-block()
 												span.nw Оценить проект
 									.col-md.wow.fadeInRight(data-wow-delay='0.52s')
 										.prm_pht&attributes(attributes)
-											img(src=`img/head-img-${x}.png`, alt='')
+											picture
+												source( srcset=`img/head-img-${x}.png` media="(min-width: 576px)")
+												img(src=`img/head-img-${x}-sm.png`, alt='')
 								.d-md-none
 										button.btt.btt-calc.wow.fadeInUp(type="button" data-wow-delay='0.3s')
 											+icon('calculator')
