--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -4,13 +4,13 @@ mixin header-block()
 		+b.prm
 			.wrp__bg.wow.slideInRight(data-wow-duration='1.2s')
 			// / WRP
-			.prm__pxs.pxs
+			.prm__pxs.pxs.d-none.d-sm-block
 				.px1.px.px-1(id=`px1`)
-					img(src='img/backs/promo-px-1.png', alt='', data-depth='1')
+					img(src="#" data-src='img/backs/promo-px-1.png', alt='', data-depth='1')
 				.px2.px.px-2(id=`px2`)
-					img(src='img/backs/promo-px-2.png', alt='', data-depth='0.75')
+					img(src="#" data-src='img/backs/promo-px-2.png', alt='', data-depth='0.75')
 				.px3.px.px-3(id=`px3`)
-					img(src='img/backs/promo-px-3.png', alt='', data-depth='0.5')
+					img(src="#" data-src='img/backs/promo-px-3.png', alt='', data-depth='0.5')
 			+e.slider--js.swiper-container
 				.swiper-wrapper
 					mixin slide(x)
