edit size portfolio

--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -33,6 +33,6 @@ mixin modal()
 	//- 			br 
 
 	div(id="modal-team" class="zoom-anim-dialog mfp-hide modal-win  " )
-		+s-team(class="")
+		+s-team-m(class="")
 	// #modal-team
 	// modal
