--- a/sourse/pug/blocks/s-about/_s-about.pug
+++ b/sourse/pug/blocks/s-about/_s-about.pug
@@ -13,7 +13,7 @@ mixin s-about()
 					p Студия не&nbsp;использует шаблоны и&nbsp;заготовки. Вы&nbsp;получаете уникальный дизайн, решающий  задачи именно для вас и&nbsp;ваших потребителей. Поэтому наши сайты отличаются дизайном и&nbsp;приносят пользу.
 				.col: +e.text-block--aside
 					+e.img-wrap
-						img(src="img/loadgif.gif" data-src="img/photo.png", alt="")
+						img(src="img/loadgif.gif" data-src="img/photo.jpg", alt="")
 					+e.aside-text 
 						p Пока одни думают какого цвета сделать кнопку, мы&nbsp;думаем как обойтись без неё.
 
