--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -254,7 +254,8 @@
 
     background-image: url(../img/head-bg.jpg);
   }
-  background-image: url(../img/head-bg-sm.jpg);
+  background-image: url(../img/head-bg-sm.webp);
+  // background-image: url(../img/head-bg-sm.jpg);
   &__slider{
     height: 100%;
   }
