--- a/sourse/pug/blocks/s-form/_s-form.scss
+++ b/sourse/pug/blocks/s-form/_s-form.scss
@@ -5,7 +5,8 @@
 
 		background-image: url(../img/form-bg.jpg);
 	}
-	background-image: url(../img/form-bg-sm.jpg);
+	background-image: url(../img/form-bg-sm.webp);
+	// background-image: url(../img/form-bg-sm.jpg);
 	@include bgs;
 	.section-title{
 		color: #ffffff;
