--- a/sourse/pug/blocks/s-logos/_s-logos.pug
+++ b/sourse/pug/blocks/s-logos/_s-logos.pug
@@ -4,7 +4,7 @@ mixin s-logos()
 		.container
 			+b.section-title.text-center
 				h2 Наши клиенты
-			.prm__pxs.pxs
+			.prm__pxs.pxs.d-none.d-sm-block
 				.px.px-4(id=`px4`)
 					img(src="#" data-src='img/list-logo-1.png', alt='', data-depth='1')
 				.px.px-5(id=`px5`)
