--- a/sourse/sass/main-2.scss
+++ b/sourse/sass/main-2.scss
@@ -6709,7 +6709,11 @@ $color-text:  #282828;
 
  body {
    position: relative;
-   background: #faf9fe url("../img/backs/bg.png") 50%/cover no-repeat;
+   @include media-breakpoint-up(md) {
+
+     background: #faf9fe url("../img/backs/bg.png") 50%/cover no-repeat;
+    }
+    background-color: #faf9fe;
  }
 
  body:before {
@@ -6720,7 +6724,10 @@ $color-text:  #282828;
    left: 0;
    width: 100%;
    height: 100%;
-   background: url("../img/backs/promo-bf.png") 50% no-repeat;
+   @include media-breakpoint-up(md) {
+
+     background: url("../img/backs/promo-bf.png") 50% no-repeat;
+    }
    -webkit-background-size: cover;
    background-size: cover;
    -webkit-transition: 0.7s;
