--- a/sourse/pug/blocks/s-form/_s-form.scss
+++ b/sourse/pug/blocks/s-form/_s-form.scss
@@ -7,6 +7,7 @@
 	}
 	background-image: url(../img/form-bg-sm.webp);
 	// background-image: url(../img/form-bg-sm.jpg);
+	background-color: $body-color;
 	@include bgs;
 	.section-title{
 		color: #ffffff;
