--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -27,7 +27,7 @@
 		&__input{
 			//  outline: 0 !important;
 			// resize: none;
-			padding-left: 57px;
+			padding-left: rem(57px);
 		}
 		textarea{
 			height: rem(122);
