--- a/sourse/pug/blocks/s-form/_s-form.scss
+++ b/sourse/pug/blocks/s-form/_s-form.scss
@@ -14,20 +14,28 @@
 		p{
 			margin-left: auto;
 			margin-right: auto;
-			max-width: 440px;
+			max-width: rem(440px);
 		}
 	}
 	//
 	.container{
-		padding-top: 40px;
-		padding-bottom: 100px;
+		padding-top: rem(40px);
+		padding-bottom: rem(100px);
 	}
+	@include media-breakpoint-up(xxxxl) {
+		.container{
+
+			max-width: 1220px;
+		}
+	}
+	
 	@include media-breakpoint-up(xl) {
 		.container{
 
 			max-width: 1020px;
 		}
 	}
+
 	position: relative;
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
