--- a/sourse/pug/blocks/s-team/_s-team.pug
+++ b/sourse/pug/blocks/s-team/_s-team.pug
@@ -28,7 +28,9 @@ mixin s-team()
 									.col-xxl-5.col-md-4.align-self-end
 										+e.img-wrap
 											+e.title.d-md-none.text-center= t
-											img.res-i(src="img/loadgif.gif" data-src=`img/team-${i}.png` , alt='')
+											picture 
+												source.lazy-sourse(srcset="#" data-srcset=`img/team-${i}-lg.png` media="(min-width: 2000px)" type="image/png" )
+												img.res-i(src="img/loadgif.gif" data-src=`img/team-${i}.png` , alt='')
 									.col
 										+e.caption
 											+e.text
@@ -79,6 +81,7 @@ mixin s-team-m()
 								mixin it(x)
 									+e.slide-sm.tabs__btn&attributes(attributes)
 										+e.img-wrap-sm
+
 											img.lazy-modal(src="img/loadgif.gif" data-img-src=`img/team-${x}-sm.png`, alt='') 
 								+it('1')(class="active")
 								+it('2')
