--- a/sourse/pug/blocks/s-logos/_s-logos.scss
+++ b/sourse/pug/blocks/s-logos/_s-logos.scss
@@ -75,7 +75,12 @@
 	@include media-breakpoint-only(sm) {}
 	@include media-breakpoint-only(md) {}
 	@include media-breakpoint-only(lg) {}
-	@include media-breakpoint-only(xl) {}
+	@include media-breakpoint-only(xl) {
+		.container{
+			max-width: 800px;
+		}
+
+	}
 	
 	//
 	@include media-breakpoint-down(xl) {}
