--- a/sourse/pug/blocks/s-team/_s-team.scss
+++ b/sourse/pug/blocks/s-team/_s-team.scss
@@ -289,7 +289,7 @@
 		img {
 			@include media-breakpoint-up(xxxl) {
 
-				max-height: none;
+				max-height: rem(900);
 			}
 			
 			@include media-breakpoint-up(xxl) {
@@ -371,7 +371,9 @@
 
 	@include media-breakpoint-only(lg) {}
 
-	@include media-breakpoint-only(xl) {}
+	@include media-breakpoint-only(lg) {
+		
+	}
 
 	//
 	@include media-breakpoint-down(xl) {}
